feat(recommendation): 优化因子诊断和加权算法
- 添加拥挤度剔除功能，过滤高相关性因子
- 实现动态半衰期计算，基于市场波动率自适应调整
- 新增财务因子季频IC校正，提升财务类因子准确性
- 在前端展示因子加权增强摘要信息
- 更新IC诊断配置，区分不同类型的因子剔除原因
- 重构后端推荐服务，集成因子相关性分析服务